--- a/admin/view/account/index.html
+++ b/admin/view/account/index.html
@@ -574,6 +574,7 @@
             addUserName = accData["web_title"];
             addLogo = accData["logo"];
             addAddress = accData["address"];
+            sort = accData["sort"];
 
             // 加载平台列表
             loadPlatList();
@@ -596,6 +597,7 @@
             addUserName = accData["web_title"];
             addLogo = accData["logo"];
             addAddress = accData["address"];
+            sort = accData["sort"];
 
             // 加载平台列表
             loadPlatList();
