--- a/admin/view/layout.html
+++ b/admin/view/layout.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="<{PUBLIC_PATH}>common/css/icon.css" type="text/css">
     <link rel="stylesheet" href="<{PUBLIC_PATH}>common/layui/css/layui.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1877015_z8b1333ma2.css" type="text/css" >
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1877015_fs67rwcxyw.css" type="text/css" >
     <link rel="stylesheet" href="<{PUBLIC_PATH}>common/css/common.css" type="text/css">
     <link rel="stylesheet" href="<{PUBLIC_PATH}>admin/css/common.css">
     <link rel="icon" type="image/x-ico" href="<{PUBLIC_PATH}>common/img/favicon.ico" />
@@ -76,6 +76,11 @@
             <li>
                 <a id="rsa_key_manager" class="icon icon-verify" href="?m=admin&c=RSAKeyManager&a=index">
                     <span>RSA密钥管理</span>
+                </a>
+            </li>
+            <li>
+                <a id="php_needle" class="icon icon-verify" href="?m=admin&c=PhpNeedle&a=index">
+                    <span>php探针</span>
                 </a>
             </li>
         </ul>
