--- a/admin/view/layout.html
+++ b/admin/view/layout.html
@@ -79,7 +79,7 @@
                 </a>
             </li>
             <li>
-                <a id="php_needle" class="icon icon-verify" href="?m=admin&c=PhpNeedle&a=index">
+                <a id="php_needle" class="iconfont icon-php" href="?m=admin&c=PhpNeedle&a=index">
                     <span>php探针</span>
                 </a>
             </li>
