--- a/admin/view/phpneedle/index.html
+++ b/admin/view/phpneedle/index.html
@@ -1,397 +1,226 @@
 <{extends file="layout.html"}>
 <{block name="myStyles"}>
 <style type="text/css">
-    .aw-content-wrap .icon {
-        background-color: #393D49;
-        margin-right: 10px;
+    .layui-field-title {
+        border: none;
+    }
+
+    .layui-field-title legend {
+        margin-left: 0;
+    }
+
+    .layui-table {
+        background-color: transparent;
+    }
+
+    .sub-title {
+        font-size: 12px;
+        color: #cccccc;
     }
 
     .layui-table thead th{
-        text-align: center;
         font-weight: bold;
+        font-size: 16px;
     }
 
-    .add-category-box {
-        background-color: rgba(0,0,0,0.7);
-        width: 100%;
-        height: 1000px;
-        margin: 0 auto;
-        position: fixed;
-        left: 0;
-        top: 0;
-        z-index: 500;
-        display: none;
-    }
-
-    .add-category-container {
-        width: 800px;
-        height: 400px;
-        background-color: #FFF;
-        margin: 150px auto;
-        padding: 10px;
-        border-radius: 2px;
-        position: relative;
-    }
-
-
-    .layui-field-title{
-        width: 800px;
-    }
-
-    .layui-form-select dl dd.layui-this {
-        background-color: #393D49;
-    }
-
-    .layui-form-item .cat-name {
-        width: 250px;
-    }
-
-    .layui-form-item .cat-sort {
-        width: 100px;
-    }
-
-    .layui-input-inline .layui-btn {
-        color: #cdcdcd
-    }
-
-    .icons-box {
-        width: 700px;
-        height: 50px;
-        overflow-x: hidden;
-        overflow-y: scroll;
-        margin-bottom: 10px;
-    }
-
-    .icons-box ul {
-        width: 700px;
-        height: 200px;
-        padding: 5px;
-    }
-
-    .icons-box ul li {
-        width: 20px;
-        height: 20px;
+    .list-ul li {
         float: left;
-        cursor: pointer;
-        color: #bfbfbf;
-        margin: 5px;
-    }
-
-    .icons-box ul li:hover {
-        color: #393D49;
-    }
-
-    .icons-box ul li i {
-        font-size: 18px;
-    }
-
-    .btns-box {
-        width: 146px;
-        position: absolute;
-        right: 10px;
-        bottom: 20px;
-    }
-
-    .btns-box .confirm-btn{
-        background-color: #393D49;
-    }
-
-    .plat_list_ul {
-        width: 800px;
         height: 30px;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
+        line-height: 30px;
+        margin: 5px;
+        background-color: #cccccc;
+        padding: 0 5px;
     }
-
-    .plat_list_ul li {
-        font-size: 12px;
-        height: 20px;
-        float: left;
-        margin-right: 10px;
-        padding: 5px;
-        background-color: #e6e6e6;
-    }
-
 </style>
 <{/block}>
 <{block name="scriptCode"}>
 <script>
-    // 添加分类选择的icon
-    var selectedIcon = '';
-    // 添加分类的分类名
-    var addCatName = '';
-    // 是否是修改分类
-    var isEdit = false;
-    // 修改分类的id
-    var editCatId = "";
-    // 排序
-    var sort = 0;
 
     $(document).ready(function () {
         // 设置边栏服务器信息选中状态
         $("#php_needle").addClass("active");
+        $(".add-btn").css("display","none");
 
-        // 监听添加分类输入分类名
-        var addCatInput = $("#add_cat_name");
-        addCatInput.bind("input propertychange", function (event) {
-            addCatName = addCatInput.val();
-        });
-
-        // 监听输入排序
-        var catSortInput = $("#cat_sort");
-        catSortInput.bind("input propertychange", function (event) {
-            sort = catSortInput.val();
-        });
-
-        // 请求分类列表
-        loadCategoryList();
-        // 请求icon
-        loadIcons();
+        // 获取基本信息
+        loadBaseInfo();
     });
-
-    // 获取分类列表
-    function loadCategoryList() {
-        var url = baseUrl + "?m=admin&c=API_Category&a=loadCategotyList&API=";
-        console.log("分类:" + url);
+    
+    // 获取基本信息
+    function loadBaseInfo() {
+        var url = baseUrl + "?m=admin&c=API_PhpNeedle&a=loadBaseInfo&API=";
+        console.log("获取基本信息:" + url);
+        showHud();
         get(url,function (data) {
-            // 创建分类列表
-            createCategoryDom(data.data);
+            // 创建基本信息列表
+            createBaseInfoTableDom(data.data);
         },false);
     }
 
-    // 请求icon
-    function loadIcons() {
-        var url = baseUrl + "?m=admin&c=API_IconManager&a=getAliIconfonts&API=";
-        console.log("请求icons:" + url);
-        get(url, function (data) {
-            layui.use('form', function(){
-                var form = layui.form;
-                var icons = data.data;
-                // 创建要选择的icon
-                var dom = "";
-                for (var i = 0; i < icons.length; i++){
-                    var icon = icons[i];
-                    dom += '<li><i icon="'+ icon +'" onclick="confirmIcon(this)" class="iconfont icon-'+ icon +'"></i></li>';
-                }
-                $(".icons-box ul").html(dom);
-                form.render();
-            });
-        },false)
-    }
-
-    // 添加分类
-    function addData() {
-        isEdit = false;
-        selectedIcon = "";
-        addCatName = "";
-        sort = 0;
-        showEditCatCover();
-    }
-
-    // 创建分类列表
-    function createCategoryDom(data) {
+    // 创建基本信息列表
+    function createBaseInfoTableDom(data) {
+        var keys = Object.keys(data);
+        console.log("所有键：" + JSON.stringify(keys));
         var dom = "";
-        for(var i = 0; i < data.length; i++){
-            var category = data[i];
+        for(var i = 0; i < keys.length; i++){
+            var key = keys[i];
             dom += '<tr>';
-            dom += '<td>' + category["sort"] + '</td>';
-            dom += '<td><i class="iconfont icon-'+ category["cat_icon"] +'"></i></td>';
-            dom += '<td>' + category["cat_title"] + '</td>';
-            dom += '<td><ul class="plat_list_ul">';
-
-            var platList = category["platform_list"];
-            for (var j = 0; j < platList.length; j++){
-                var plat = platList[j];
-                dom += '<li>'+ plat +'</li>';
-            }
-            dom += '</ul></td>';
-            dom += '<td><i onclick="editCategory(this)" catId="'+ category["id"] +'" style="cursor: pointer" class="icon icon-edit"></i>';
-            dom += '<i catId="'+ category["id"] +'" onclick="deleteCat(this)" style="cursor: pointer" class="icon icon-trash"></i></td>';
+            dom += '<td>' + key + '</td>';
+            dom += '<td>' + data[key] + '</td></tr>';
         }
+        $("#base_info_table tbody").html(dom);
 
-        // 添加分类一行
-        $("tbody").html(dom);
-    }
-
-    // 确定选择的icon
-    function confirmIcon(obj) {
-        var $this = $(obj);
-        var iconName = $this.attr("icon");
-        selectIcon(iconName);
-    }
-
-    // 选择图标
-    function selectIcon(iconName) {
-        if (iconName.length > 0){
-            var btnContent = '已选择 <i class="iconfont icon-'+ iconName +'"></i>';
-            $(".layui-input-inline button").html(btnContent);
-            $(".layui-input-inline button i").css("color","#393D49");
-            selectedIcon = iconName;
-        }else {
-            $(".layui-input-inline button").html("请选择");
-        }
+        // 服务器性能测试
+        loadPerformResult();
     }
     
-    // 确定添加分类
-    function confirm() {
-        if (selectedIcon.length == 0){
-            toast("请选择图标");
-            return;
-        }
-        if (addCatName.length == 0){
-            toast("请输入分类名");
-            return;
-        }
-
-        // 请求添加分类接口
-        var url = "";
-        if (isEdit){
-            // 修改
-            url = baseUrl + "?m=admin&c=API_Category&a=editCategory"
-                + "&icon=" + selectedIcon
-                + "&catName=" + addCatName
-                + "&id=" + editCatId
-                + "&API="
-                + "&sort=" + sort;
-        }else {
-            // 添加
-            url = baseUrl + "?m=admin&c=API_Category&a=addCategory"
-                + "&icon=" + selectedIcon
-                + "&catName=" + addCatName
-                + "&API="
-                + "&sort=" + sort;
-        }
-
-        get(url,function () {
-            // 浮层消失
-            hideEditCatCover();
-            // 刷新分类列表
-            loadCategoryList();
-        },true,true);
-    }
-
-    // 取消添加分类
-    function cancel() {
-        hideEditCatCover();
-    }
-
-    // 删除分类
-    function deleteCat(obj) {
-        confirmAlert(function () {
-            var $this = $(obj);
-            var catId = $this.attr("catId");
-            var url = baseUrl + "?m=admin&c=API_Category&a=deleteCategory&id=" + catId + "&API=";
-            get(url,function () {
-                // 刷新列表
-                loadCategoryList();
-            },true,true);
-        });
-    }
-    
-    // 编辑分类
-    function editCategory(obj) {
-        isEdit = true;
-        var $this = $(obj);
-        var catId = $this.attr("catId");
-        editCatId = catId;
-
-        // 请求指定分类数据
-        var url = baseUrl + "?m=admin&c=API_Category&a=loadCategory&id=" + catId + "&API=";
+    // 服务器性能测试
+    function loadPerformResult() {
+        var url = baseUrl + "?m=admin&c=API_PhpNeedle&a=loadPerformResult&API=";
         get(url,function (data) {
-            var catData = data.data;
-            selectedIcon = catData["cat_icon"];
-            addCatName = catData["cat_title"];
-            sort = catData["sort"];
-            showEditCatCover();
-        })
+            createServerPerform(data.data);
+        },false);
+    }
+
+    // 创建服务器性能测试列表
+    function createServerPerform(data) {
+        var dataList = [{
+            "s" : "MKDuse的机子(P4 1.5G 256DDR winxp sp2)",
+            "i" : "465.08ms",
+            "f" : "466.66ms"
+        },{
+            "s" : "当前服务器",
+            "i" : data["i"],
+            "f" : data["f"]
+        }];
+
+        var dom = "";
+        for(var i = 0; i < dataList.length; i++){
+            var d = dataList[i];
+            dom += '<tr>';
+            dom += '<td>' + d["s"] + '</td>';
+            dom += '<td>' + d["i"] + '</td>';
+            dom += '<td>' + d["f"] + '</td></tr>';
+        }
+        $("#server_perform_table tbody").html(dom);
+
+        // 加载所有扩展
+        loadExtensionList();
+    }
+
+    // 加载所有扩展
+    function loadExtensionList() {
+        var url = baseUrl + "?m=admin&c=API_PhpNeedle&a=loadExtensionList&API=";
+        console.log("加载所有扩展:" + url);
+        get(url,function (data) {
+            // 创建带宽测试信息
+            createExtensionListDom(data.data);
+        },false);
     }
     
-    // 显示添加/修改分类浮层
-    function showEditCatCover() {
-        if (isEdit){
-            $("#legend_title").text("修改分类");
-        }else {
-            $("#legend_title").text("添加分类");
+    // 创建扩展列表
+    function createExtensionListDom(data) {
+        var dom = '';
+        for(var i = 0; i < data.length; i++){
+            var d = data[i];
+            dom += '<li>' + d + '</li>';
         }
-        $(".add-category-box").css("display","block");
-        selectIcon(selectedIcon);
+        $("#extension_ul").html(dom);
 
-        $("#add_cat_name").val(addCatName);
-        $("#cat_sort").val(sort);
+        // 加载禁用函数列表
+        loadDisableFuncList();
+    }
+    
+    // 加载禁用函数列表
+    function loadDisableFuncList() {
+        var url = baseUrl + "?m=admin&c=API_PhpNeedle&a=loadDisableFuncList&API=";
+        console.log("加载禁用函数:" + url);
+        get(url,function (data) {
+            // 创建带宽测试信息
+            createDisableFuncListDom(data.data);
+        },false);
     }
 
-    // 隐藏添加/修改分类浮层
-    function hideEditCatCover() {
-        $(".add-category-box").css("display","none");
+    // 创建禁用函数列表
+    function createDisableFuncListDom(data) {
+        var dom = '';
+        for(var i = 0; i < data.length; i++){
+            var d = data[i];
+            dom += '<li>' + d + '</li>';
+        }
+        $("#disable_func_ul").html(dom);
+
+        setTimeout(function () {
+            hideHud();
+        },20);
     }
 
 </script>
 <{/block}>
 <{block name="content"}>
 <div class="aw-content-wrap">
-    <div class="mod">
-        <div class="layui-form" style="text-align: center;">
-            <table class="layui-table">
-                <colgroup>
-                    <col width="150">
-                    <col width="150">
-                    <col width="150">
-                    <col>
-                    <col width="200">
-                </colgroup>
-                <thead>
-                <tr>
-                    <th>排序</th>
-                    <th>分类图标</th>
-                    <th>分类标题</th>
-                    <th>平台</th>
-                    <th>操作</th>
-                </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-        </div>
+    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+        <legend>基本信息</legend>
+    </fieldset>
+    <div class="layui-form">
+        <table class="layui-table" id="base_info_table" lay-skin="nob">
+            <tbody>
+            </tbody>
+        </table>
     </div>
-</div>
 
-<!--添加分类浮层-->
-<div class="add-category-box">
-    <div class="add-category-container">
-        <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-            <legend id="legend_title">添加分类</legend>
-        </fieldset>
-        <form class="layui-form layui-form-pane" action="">
-            <div class="layui-form-item">
-                <label class="layui-form-label">排序</label>
-                <div class="layui-input-inline cat-sort">
-                    <input style="text-align: center" id="cat_sort" type="text" lay-verify="required" placeholder="请输入排序" autocomplete="off" class="layui-input">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">图标</label>
-                <div class="layui-input-inline">
-                    <button disabled="disabled" type="button" class="layui-btn layui-btn-primary">请选择</button>
-                </div>
-            </div>
-            <div class="icons-box">
-                <ul>
-                </ul>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">分类名称</label>
-                <div class="layui-input-inline cat-name">
-                    <input id="add_cat_name" type="text" name="username" lay-verify="required" placeholder="请输入分类名称" autocomplete="off" class="layui-input">
-                </div>
-            </div>
-        </form>
+    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+        <legend>服务器性能测试</legend>
+    </fieldset>
+    <div class="layui-form">
+        <table class="layui-table" id="server_perform_table" lay-skin="nob">
+            <colgroup>
+                <col width="150">
+                <col width="150">
+                <col width="150">
+            </colgroup>
+            <thead>
+            <tr>
+                <th>服务器</th>
+                <th>整数运算<span class="sub-title">50万次加法(1+1)</span></th>
+                <th>浮点数运算<span class="sub-title">50万次平方根(3.14开方)</span></th>
+            </tr>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
 
-        <!--确定/取消按钮-->
-        <div class="btns-box">
-            <button onclick="cancel()" type="button" class="layui-btn layui-btn-primary">取消</button>
-            <button onclick="confirm()" type="button" class="layui-btn confirm-btn">确认</button>
-        </div>
+    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+        <legend>已加载的扩展库</legend>
+    </fieldset>
+    <div class="layui-form">
+        <table class="layui-table" id="extension_lib_table" lay-skin="nob">
+            <tbody>
+            <tr>
+                <td>
+                    <ul class="list-ul" id="extension_ul">
+
+                    </ul>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+        <legend>禁用的函数</legend>
+    </fieldset>
+    <div class="layui-form">
+        <table class="layui-table" id="disable_func_table" lay-skin="nob">
+            <tbody>
+            <tr>
+                <td>
+                    <ul class="list-ul" id="disable_func_ul">
+
+                    </ul>
+                </td>
+            </tr>
+            </tbody>
+        </table>
     </div>
 </div>
 <{/block}>
