--- a/admin/view/db/index.html
+++ b/admin/view/db/index.html
@@ -354,4 +354,6 @@
     <div class="log-box"></div>
     <div id="timer" style="display: none"></div>
 </div>
+
+<input type="hidden" id="db_name" value="<{$data.dbname}>">
 <{/block}>
