--- a/admin/view/layout.html
+++ b/admin/view/layout.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="<{PUBLIC_PATH}>common/css/common.css" type="text/css">
     <link rel="stylesheet" href="<{PUBLIC_PATH}>admin/css/common.css">
     <link rel="icon" type="image/x-ico" href="<{PUBLIC_PATH}>common/img/favicon.ico" />
+    <link rel="stylesheet/less" type="text/css" href="<{PUBLIC_PATH}>common/css/less.less" />
     <{block name="myStyles"}> <{/block}>
 </head>
 
@@ -20,6 +21,13 @@
 <input id="base_url" type="hidden" value="<{$data.baseUrl}>">
 <!--图片baseUrl-->
 <input id="image_base_url" type="hidden" value="<{$data.imageUrl}>">
+
+<!--加载数据等待界面-->
+<div class="main-hud" onclick="hideHud()">
+    <span class="ant-spin-dot ant-spin-dot-spin">
+            <i></i><i></i><i></i><i></i>
+    </span>
+</div>
 
 <!--侧边栏-->
 <div id="as_float_menu" class="as-float-menu">
@@ -84,6 +92,11 @@
                 </a>
             </li>
         </ul>
+        <{if isset($data.totalSpace) && isset($data.freeSpace)}>
+        <p style="color: #505050;text-align: center; position: absolute;bottom: 20px;width: 250px">
+            共<{$data.totalSpace}>&nbsp;&nbsp;&nbsp;可用<{$data.freeSpace}>
+        </p>
+        <{/if}>
     </div>
     <div class="ps-scrollbar-x-rail" style="width: 250px; display: none; left: 0px; bottom: 3px;">
         <div class="ps-scrollbar-x" style="left: 0px; width: 0px;"></div>
@@ -95,7 +108,6 @@
 <{/if}>
 
 <input type="hidden" id="slidebar_state_flag" value="<{$data.slideBarState}>"/>
-<input type="hidden" id="db_name" value="<{$data.dbname}>">
 
 <!--添加按钮-->
 <button type="button" class="add-btn" onclick="addData()">
@@ -114,6 +126,7 @@
 <script src="<{PUBLIC_PATH}>admin/js/common.js"  type="text/javascript"></script>
 <script src="<{PUBLIC_PATH}>common/js/sidebar.js" type="text/javascript"></script>
 <script src="<{PUBLIC_PATH}>common/js/timer.jquery.min.js" type="text/javascript"></script>
+<script src="<{PUBLIC_PATH}>common/js/less.min.js"></script>
 <{block name="scriptCode"}><{/block}>
 
 
