--- a/public/common/css/common.css
+++ b/public/common/css/common.css
@@ -432,4 +432,15 @@ body .toast-fail-style .layui-layer-content{
 	transition: all 220ms ease-in-out;
 }
 
+.main-hud {
+	width: 100%;
+	height: 100%;
+	background-color: rgba(255,255,255,0.5);
+	position: fixed;
+	left: 0;
+	top: 0;
+	z-index: 9999999;
+	display: none;
+}
+
 
