--- a/admin/view/account/index.html
+++ b/admin/view/account/index.html
@@ -203,6 +203,10 @@
     .layui-form-item .cat-sort {
         width: 100px;
     }
+
+    .layui-form-item .layui-input-inline {
+        width: 300px;
+    }
 </style>
 <{/block}>
 <{block name="scriptCode"}>
