--- a/public/home/css/cards.css
+++ b/public/home/css/cards.css
@@ -166,3 +166,20 @@ h4 i.iconfont {
     padding: 0;
     border: none;
 }
+
+.loading-cover {
+    width: 100%;
+    height: 1000px;
+    margin: 0 auto;
+    position: fixed;
+    left: 0;
+    top: 0;
+    display: none;
+    text-align: center;
+}
+
+.loading-cover img {
+    width: 30px;
+    height: 30px;
+    margin-top: 350px;
+}
