--- a/home/view/account/index.html
+++ b/home/view/account/index.html
@@ -73,6 +73,6 @@
 
 <!--等待加载loading-->
 <div class="loading-cover">
-    <img style="width: 100px;height: 100px;background-color: #cccccc" src="/public/common/img/loading.gif">
+    <img style="width: 100px;height: 100px;background-color: transparent" src="/public/common/img/loading.gif">
 </div>
 <{/block}>
