--- a/home/view/account/index.html
+++ b/home/view/account/index.html
@@ -71,10 +71,11 @@
     </div>
 
     <!--等待加载loading-->
-    <div class="loading-cover">
-        <img style="width: 60px;height: 60px;background-color: transparent" src="/public/common/img/loading.gif">
+    <div class="mod">
+        <div class="loading-cover">
+            <img style="width: 60px;height: 60px;background-color: transparent" src="/public/common/img/loading.gif">
+        </div>
     </div>
 </div>
-
 
 <{/block}>
