--- a/home/view/account/index.html
+++ b/home/view/account/index.html
@@ -1,7 +1,10 @@
 <{extends file="layout.html"}>
 <{block name="myStyles"}>
 <style type="text/css">
-
+    .loading-cover {
+        width: 100%;
+        height: 100%;
+    }
 </style>
 <{/block}>
 <{block name="scriptCode"}>
