--- a/home/view/account/index.html
+++ b/home/view/account/index.html
@@ -2,8 +2,7 @@
 <{block name="myStyles"}>
 <style type="text/css">
     .loading-cover {
-        width: 100%;
-        height: 100%;
+        margin-left: 250px;
     }
 </style>
 <{/block}>
