--- a/admin/view/layout.html
+++ b/admin/view/layout.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="<{PUBLIC_PATH}>common/css/icon.css" type="text/css">
     <link rel="stylesheet" href="<{PUBLIC_PATH}>common/layui/css/layui.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1877015_gdveh90o5h.css" type="text/css" >
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1877015_4aj02q2orql.css" type="text/css" >
     <link rel="stylesheet" href="<{PUBLIC_PATH}>common/css/common.css" type="text/css">
     <link rel="stylesheet" href="<{PUBLIC_PATH}>admin/css/common.css">
     <link rel="icon" type="image/x-ico" href="<{PUBLIC_PATH}>common/img/favicon.ico" />
@@ -89,6 +89,11 @@
             <li>
                 <a id="php_needle" class="iconfont icon-php" href="?m=admin&c=PhpNeedle&a=index">
                     <span>php探针</span>
+                </a>
+            </li>
+            <li>
+                <a id="server_info" class="iconfont icon-fuwuqi" href="?m=admin&c=PhpNeedle&a=index">
+                    <span>服务器信息</span>
                 </a>
             </li>
         </ul>
