--- a/admin/view/layout.html
+++ b/admin/view/layout.html
@@ -92,7 +92,7 @@
                 </a>
             </li>
             <li>
-                <a id="server_info" class="iconfont icon-fuwuqi" href="?m=admin&c=PhpNeedle&a=index">
+                <a id="server_info" class="iconfont icon-fuwuqi" href="?m=admin&c=ServerInfo&a=index">
                     <span>服务器信息</span>
                 </a>
             </li>
