--- a/admin/view/server/index.html
+++ b/admin/view/server/index.html
@@ -37,7 +37,7 @@
 <script>
     $(document).ready(function () {
         // 设置边栏服务器信息选中状态
-        $("#php_needle").addClass("active");
+        $("#server_info").addClass("active");
         $(".add-btn").css("display","none");
 
         // 获取内存使用详情
