--- a/admin/view/phpneedle/index.html
+++ b/admin/view/phpneedle/index.html
@@ -184,6 +184,7 @@
                 <th>整数运算<span class="sub-title">50万次加法(1+1)</span></th>
                 <th>浮点数运算<span class="sub-title">50万次平方根(3.14开方)</span></th>
             </tr>
+            </thead>
             <tbody>
             </tbody>
         </table>
