--- a/admin/view/server/index.html
+++ b/admin/view/server/index.html
@@ -161,6 +161,11 @@
     </fieldset>
     <div class="layui-form">
         <table class="layui-table" id="memory_used_table" lay-skin="nob">
+            <colgroup>
+                <col width="150">
+                <col width="150">
+                <col width="150">
+            </colgroup>
             <tbody>
             </tbody>
         </table>
@@ -182,6 +187,7 @@
                 <th>整数运算<span class="sub-title">50万次加法(1+1)</span></th>
                 <th>浮点数运算<span class="sub-title">50万次平方根(3.14开方)</span></th>
             </tr>
+            </thead>
             <tbody>
             </tbody>
         </table>
