--- a/admin/view/server/index.html
+++ b/admin/view/server/index.html
@@ -171,6 +171,21 @@
         </table>
     </div>
 
+    <fieldset class="layui-elem-field layui-field-title">
+        <legend>cpu使用</legend>
+    </fieldset>
+    <div class="layui-form">
+        <table class="layui-table" id="cpu_used_table" lay-skin="nob">
+            <colgroup>
+                <col width="150">
+                <col width="150">
+                <col width="150">
+            </colgroup>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
+
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
         <legend>服务器性能测试</legend>
     </fieldset>
