--- a/admin/view/server/index.html
+++ b/admin/view/server/index.html
@@ -67,42 +67,34 @@
 
         $("#memory_used_table tbody").html(dom);
 
-        // 服务器性能测试
-        // loadPerformResult();
+        // 进程信息获取
+        loadProgressInfo();
     }
     
-    // 服务器性能测试
-    function loadPerformResult() {
-        var url = baseUrl + "?m=admin&c=API_PhpNeedle&a=loadPerformResult&API=";
+    // 进程信息获取
+    function loadProgressInfo() {
+        var url = baseUrl + "?m=admin&c=API_ServerInfo&a=getProgressInfo&API=";
         get(url,function (data) {
-            createServerPerform(data.data);
+            createProgressInfoDom(data.data);
         },false);
     }
 
-    // 创建服务器性能测试列表
-    function createServerPerform(data) {
-        var dataList = [{
-            "s" : "MKDuse的机子(P4 1.5G 256DDR winxp sp2)",
-            "i" : "465.08ms",
-            "f" : "466.66ms"
-        },{
-            "s" : "当前服务器",
-            "i" : data["i"],
-            "f" : data["f"]
-        }];
-
+    // 创建进程信息显示dom
+    function createProgressInfoDom(data) {
         var dom = "";
-        for(var i = 0; i < dataList.length; i++){
-            var d = dataList[i];
+        for(var i = 0; i < data.length; i++){
+            var d = data[i];
             dom += '<tr>';
-            dom += '<td>' + d["s"] + '</td>';
-            dom += '<td>' + d["i"] + '</td>';
-            dom += '<td>' + d["f"] + '</td></tr>';
+            dom += '<td>' + d["proName"] + '</td>';
+            dom += '<td>' + d["cpuUsed"] + '</td>';
+            dom += '<td>' + d["memoryUsed"] + '</td>';
+            dom += '<td>' + d["memorySpaceFormate"] + '</td></tr>';
         }
-        $("#server_perform_table tbody").html(dom);
+        $("#progress_info_table tbody").html(dom);
 
-        // 加载所有扩展
-        loadExtensionList();
+        setTimeout(function () {
+            hideHud();
+        },20);
     }
 
     // 加载所有扩展
@@ -171,26 +163,11 @@
         </table>
     </div>
 
-    <fieldset class="layui-elem-field layui-field-title">
-        <legend>cpu使用</legend>
-    </fieldset>
-    <div class="layui-form">
-        <table class="layui-table" id="cpu_used_table" lay-skin="nob">
-            <colgroup>
-                <col width="150">
-                <col width="150">
-                <col width="150">
-            </colgroup>
-            <tbody>
-            </tbody>
-        </table>
-    </div>
-
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-        <legend>服务器性能测试</legend>
+        <legend>进程信息</legend>
     </fieldset>
     <div class="layui-form">
-        <table class="layui-table" id="server_perform_table" lay-skin="nob">
+        <table class="layui-table" id="progress_info_table" lay-skin="nob">
             <colgroup>
                 <col width="150">
                 <col width="150">
@@ -198,9 +175,10 @@
             </colgroup>
             <thead>
             <tr>
-                <th>服务器</th>
-                <th>整数运算<span class="sub-title">50万次加法(1+1)</span></th>
-                <th>浮点数运算<span class="sub-title">50万次平方根(3.14开方)</span></th>
+                <th>进程名</th>
+                <th>cpu使用率</th>
+                <th>内存使用率</th>
+                <th>内存占用大小</th>
             </tr>
             </thead>
             <tbody>
