--- a/admin/view/server/index.html
+++ b/admin/view/server/index.html
@@ -106,6 +106,13 @@
                 <col width="150">
                 <col width="150">
             </colgroup>
+            <thead>
+            <tr>
+                <th>进程名</th>
+                <th>cpu使用率</th>
+                <th>内存使用率</th>
+            </tr>
+            </thead>
             <tbody>
             </tbody>
         </table>
