--- a/admin/view/server/index.html
+++ b/admin/view/server/index.html
@@ -104,7 +104,6 @@
             <colgroup>
                 <col width="150">
                 <col width="150">
-                <col width="150">
             </colgroup>
             <thead>
             <tr>
@@ -118,7 +117,7 @@
         </table>
     </div>
 
-    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+    <fieldset class="layui-elem-field layui-field-title">
         <legend>进程信息</legend>
     </fieldset>
     <div class="layui-form">
