--- a/admin/view/server/index.html
+++ b/admin/view/server/index.html
@@ -111,7 +111,7 @@
         </table>
     </div>
 
-    <fieldset class="layui-elem-field layui-field-title">
+    <fieldset class="layui-elem-field layui-field-title"  style="margin-top: -20px;">
         <legend>进程信息</legend>
     </fieldset>
     <div class="layui-form">
