--- a/admin/view/server/index.html
+++ b/admin/view/server/index.html
@@ -26,6 +26,16 @@
         background-color: #cccccc;
         padding: 0 5px;
     }
+
+    .layui-btn-primary {
+        background-color: #393D49;
+        color: #fff;
+    }
+    
+    .layui-btn-primary:hover{
+        color: #FFF;
+    }
+
 </style>
 <{/block}>
 <{block name="scriptCode"}>
@@ -92,10 +102,17 @@
         },20);
     }
 
+    // 重启服务器
+    function rebootServer() {
+        var url = baseUrl + "?m=admin&c=API_ServerInfo&a=getProgressInfo&API=";
+        get(url,null,true,true);
+    }
+
 </script>
 <{/block}>
 <{block name="content"}>
 <div class="aw-content-wrap">
+    <button onclick="rebootServer()" type="button" class="layui-btn layui-btn-primary layui-btn-lg">重启服务器</button>
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
         <legend>内存使用</legend>
     </fieldset>
