--- a/admin/view/server/index.html
+++ b/admin/view/server/index.html
@@ -31,7 +31,7 @@
         background-color: #393D49;
         color: #fff;
     }
-    
+
     .layui-btn-primary:hover{
         color: #FFF;
     }
@@ -108,11 +108,16 @@
         get(url,null,true,true);
     }
 
+    // 刷新
+    function reload() {
+        loadMemoryUsed();
+    }
 </script>
 <{/block}>
 <{block name="content"}>
 <div class="aw-content-wrap">
     <button onclick="rebootServer()" type="button" class="layui-btn layui-btn-primary layui-btn-lg">重启服务器</button>
+    <button onclick="reload()" type="button" class="layui-btn layui-btn-primary layui-btn-lg">刷新</button>
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
         <legend>内存使用</legend>
     </fieldset>
