--- a/admin/view/server/index.html
+++ b/admin/view/server/index.html
@@ -104,8 +104,9 @@
 
     // 重启服务器
     function rebootServer() {
-        var url = baseUrl + "?m=admin&c=API_ServerInfo&a=getProgressInfo&API=";
-        get(url,null,true,true);
+        // var url = baseUrl + "?m=admin&c=API_ServerInfo&a=getProgressInfo&API=";
+        // get(url,null,true,true);
+        toast("暂时无法做到");
     }
 
     // 刷新
